# mec-pkg

./: .gitmodules  CMakeLists.txt  build.sh  clean.sh  make_deb.sh  mec
debian/: changelog  control  copyright  mec-blokas.manpages
debian/DEBIAN/: control  postinst
debian/usr/share/doc/mec/: changelog  changelog.Debian
debian/usr/share/man/man1/: mec.1
